Localizations.java: - Added Comments - Fixed Typo - Added Error Message LearningUnitController.java & LearningUnitModel.java: - Seperated HelloController into the 2 Classes MainApplication.java: - Renamed from HelloApplication example.html: - Moved and fixed Paths

--- a/src/main/resources/example.html
+++ b/src/main/resources/example.html
@@ -49,7 +49,7 @@
     <!--    </table>-->
     <div class="clearfix">
         <div class="section">
-            <img class="wrap-figure tim" src="testImages/tim.png" alt="">
+            <img class="wrap-figure tim" src="testImages/tim.png" alt="TEST">
             <div class="text">Das ist Tim.</div>
         </div>
         <div class="section">
@@ -67,7 +67,7 @@
         Warum soll Tim zum Augenarzt gehen? Schreibe auf.
     </div>
 
-    <img src="../../testImages/keyboard.png" style="max-width:180px">
+    <img src="testImages/keyboard.png" style="max-width:180px">
     <br>
     <form>
         <label>
