--- a/src/main/resources/example.html
+++ b/src/main/resources/example.html
@@ -17,7 +17,7 @@
          * @return: All Sections in the current HTML
          */
         function getContainer() {
-            return document.querySelectorAll(".section,.information,.info_and_slide,.slide_vorschau");
+            return document.querySelectorAll(".section,.info_and_slide,.slide_vorschau");
         }
 
         function getSlides() {
@@ -36,22 +36,6 @@
     <button class="nav-button" onclick="javaBridge.disablePreamble();">Verstanden!</button>
 </div>
 <div class="chapter">
-
-    <!--    <table>-->
-    <!--        <tr class="section">-->
-    <!--            <td class="text table-bottom">Das ist Tim.</td>-->
-    <!--            <td rowspan="2"><img class="tim" src="../../testImages/tim.png" alt=""></td>-->
-    <!--        </tr>-->
-    <!--        <tr class="section">-->
-    <!--            <td class="text">-->
-    <!--                <button class="reading">Vorlesen</button>-->
-    <!--                <br>-->
-    <!--                Tim ist 10 Jahre alt und geht in die 4. Klasse. Er sitzt im Klassenraum in der letzten Reihe.-->
-    <!--                Er hat oft Kopfschmerzen. Ständig kneift er die Augen zusammen.-->
-    <!--                Seine Lehrerin bittet ihn, zum Augenarzt zu gehen.-->
-    <!--            </td>-->
-    <!--        </tr>-->
-    <!--    </table>-->
     <div class="clearfix">
         <div class="section">
             <img class="wrap-figure tim" src="testImages/tim.png" alt="TEST">
@@ -129,12 +113,13 @@
         </div>
     </div>
     <br>
-    <div class="information">
-        <div class="clearfix">
-            <div class="section">
+    <div class="section">
+        <div class="information">
+            <div class="clearfix">
                 <div class="text ">
                     <img src="testImages/lightbulb.png" class="task-icon" alt="">
-                    Damit das Sehen funktioniert, sind besonders die Iris und die Pupille, die Linse und die Netzhaut
+                    Damit das Sehen funktioniert, sind besonders die Iris und die Pupille, die Linse und die
+                    Netzhaut
                     erforderlich. Die Linse und die Netzhaut sind von außen nicht sichtbar.
                 </div>
                 <div class="slide_vorschau"></div>
@@ -152,30 +137,32 @@
                         <img src="testImages/Aufbau_Auge_Beschriftung_3.png" alt=""/>
                     </div>
                 </div>
-            <div class="info_and_slide">
-                <div class="text">
-                    In dem Querschnitt des Augapfels ist die Pupille als Loch in der Iris deutlich zu erkennen.
+                <div class="info_and_slide">
+                    <div class="text">
+                        In dem Querschnitt des Augapfels ist die Pupille als Loch in der Iris deutlich zu erkennen.
+                    </div>
                 </div>
-            </div>
 
-            <div class="info_and_slide">
-                <div class="text">
-                    Hinter der Pupille befindet sich die Linse, die dafür sorgt, dass wir Gegenstände deutlich sehen
-                    können.
+                <div class="info_and_slide">
+                    <div class="text">
+                        Hinter der Pupille befindet sich die Linse, die dafür sorgt, dass wir Gegenstände deutlich
+                        sehen
+                        können.
+                    </div>
                 </div>
-            </div>
 
-            <div class="info_and_slide">
-                <div class="text">
-                    Die Netzhaut ist dafür zuständig, das gesehene Bild wahrzunehmen und die Informationen über den
-                    Sehnerv
-                    an
-                    das Gehirn weiterzuleiten. Der Sehnerv ist ebenfalls von außen nicht sichtbar.
+                <div class="info_and_slide">
+                    <div class="text">
+                        Die Netzhaut ist dafür zuständig, das gesehene Bild wahrzunehmen und die Informationen über
+                        den
+                        Sehnerv
+                        an
+                        das Gehirn weiterzuleiten. Der Sehnerv ist ebenfalls von außen nicht sichtbar.
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 </div>
 <div class="chapter">
     <div class="section">
@@ -191,8 +178,8 @@
             <img src="testImages/Taschenlampe.png" alt=""/>
         </div>
     </div>
-    <div class="information">
-        <div class="section">
+    <div class="section">
+        <div class="information">
             <div class="text wrap-text">
                 <img src="testImages/lightbulb.png" class="task-icon" alt="">
                 Licht breitet sich immer geradlinig aus.<br>
@@ -229,8 +216,8 @@
             <img src="testImages/Tür.png" alt=""/>
         </div>
     </div>
-    <div class="information">
-        <div class="section">
+    <div class="section">
+        <div class="information">
             <div class="text">
                 <img src="testImages/lightbulb.png" class="task-icon" alt=""/> Unsere Augen sind Lichtempfänger. Wir
                 sehen unsere Umwelt, weil die Gegenstände das Licht
