--- a/src/main/resources/example.html
+++ b/src/main/resources/example.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="css/learningUnit.css">
 
     <script>
-
         function changeBgColor() {
             document.body.style.backgroundColor = document.getElementById('color').value;
             document.getElementsByTagName('aufgabe');
@@ -24,18 +23,37 @@
             return document.querySelectorAll(".slide");
         }
 
+        async function scrollToBottom() {
+            let current = document.body.scrollTop + window.innerHeight;
+            let target = document.body.scrollHeight;
+            let delta = target - current;
+            const duration = 300;
+            const steps = duration/10;
+            const stepSize = delta / steps;
+
+            for (let i = 0; i < steps; i++) {
+                window.scrollBy(0, stepSize);
+                await sleep(duration/steps);
+            }
+        }
+
+        function sleep(milliseconds) {
+            return new Promise(resolve => setTimeout(resolve, milliseconds));
+        }
     </script>
 </head>
 
 <body>
-
 <div class="preamble" id="preamble">
     <div class="text">
         Hallo alle zusammen, dies ist ein Test für die Bachelorarbeit für digitale Lerninhalte!
     </div>
     <button class="nav-button" onclick="javaBridge.disablePreamble();">Verstanden!</button>
 </div>
-<div class="chapter">
+<div id="chapter-select">
+
+</div>
+<div id="chap0" class="chapter">
     <div class="clearfix">
         <div class="section">
             <img class="wrap-figure tim" src="testImages/tim.png" alt="TEST">
@@ -67,7 +85,7 @@
     <input class="submit" type="submit" value="Speichern">
 </div>
 
-<div class="chapter">
+<div id="chap1" class="chapter">
     <div class="section">
         <h1>1 Der Aufbau des menschlichen Auges</h1>
         <img class="eye-small" src="testImages/Auge_Klein.png" alt=""/>
@@ -116,55 +134,55 @@
     <div class="section">
         <div class="information">
             <div class="clearfix">
-                    <div class="text ">
-                        <img src="testImages/lightbulb.png" class="task-icon" alt="">
-                        Damit das Sehen funktioniert, sind besonders die Iris und die Pupille, die Linse und die
-                        Netzhaut
-                        erforderlich. Die Linse und die Netzhaut sind von außen nicht sichtbar.
+                <div class="text ">
+                    <img src="testImages/lightbulb.png" class="task-icon" alt="">
+                    Damit das Sehen funktioniert, sind besonders die Iris und die Pupille, die Linse und die
+                    Netzhaut
+                    erforderlich. Die Linse und die Netzhaut sind von außen nicht sichtbar.
+                </div>
+                <div class="slide_vorschau"></div>
+                <div class="diashow">
+                    <div class="slide">
+                        <img src="testImages/Aufbau_Auge.png" alt=""/>
                     </div>
-                    <div class="slide_vorschau"></div>
-                    <div class="diashow">
-                        <div class="slide">
-                            <img src="testImages/Aufbau_Auge.png" alt=""/>
-                        </div>
-                        <div class="slide">
-                            <img src="testImages/Aufbau_Auge_Beschriftung_1.png" alt=""/>
-                        </div>
-                        <div class="slide">
-                            <img src="testImages/Aufbau_Auge_Beschriftung_2.png" alt=""/>
-                        </div>
-                        <div class="slide">
-                            <img src="testImages/Aufbau_Auge_Beschriftung_3.png" alt=""/>
-                        </div>
+                    <div class="slide">
+                        <img src="testImages/Aufbau_Auge_Beschriftung_1.png" alt=""/>
                     </div>
-                    <div class="info_and_slide">
-                        <div class="text">
-                            In dem Querschnitt des Augapfels ist die Pupille als Loch in der Iris deutlich zu erkennen.
-                        </div>
+                    <div class="slide">
+                        <img src="testImages/Aufbau_Auge_Beschriftung_2.png" alt=""/>
                     </div>
+                    <div class="slide">
+                        <img src="testImages/Aufbau_Auge_Beschriftung_3.png" alt=""/>
+                    </div>
+                </div>
+                <div class="info_and_slide">
+                    <div class="text">
+                        In dem Querschnitt des Augapfels ist die Pupille als Loch in der Iris deutlich zu erkennen.
+                    </div>
+                </div>
 
-                    <div class="info_and_slide">
-                        <div class="text">
-                            Hinter der Pupille befindet sich die Linse, die dafür sorgt, dass wir Gegenstände deutlich
-                            sehen
-                            können.
-                        </div>
+                <div class="info_and_slide">
+                    <div class="text">
+                        Hinter der Pupille befindet sich die Linse, die dafür sorgt, dass wir Gegenstände deutlich
+                        sehen
+                        können.
                     </div>
+                </div>
 
-                    <div class="info_and_slide">
-                        <div class="text">
-                            Die Netzhaut ist dafür zuständig, das gesehene Bild wahrzunehmen und die Informationen über
-                            den
-                            Sehnerv
-                            an
-                            das Gehirn weiterzuleiten. Der Sehnerv ist ebenfalls von außen nicht sichtbar.
-                        </div>
+                <div class="info_and_slide">
+                    <div class="text">
+                        Die Netzhaut ist dafür zuständig, das gesehene Bild wahrzunehmen und die Informationen über
+                        den
+                        Sehnerv
+                        an
+                        das Gehirn weiterzuleiten. Der Sehnerv ist ebenfalls von außen nicht sichtbar.
                     </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
-<div class="chapter">
+<div id="chap2" class="chapter">
     <div class="section">
         <h1>2 Ausbreitung von Licht</h1>
         <div class="text">
@@ -180,18 +198,18 @@
     </div>
     <div class="section">
         <div class="information">
-                <div class="text wrap-text">
-                    <img src="testImages/lightbulb.png" class="task-icon" alt="">
-                    Licht breitet sich immer geradlinig aus.<br>
-                    Das kann man besonders gut beobachten, wenn die Lichtstrahlen der Sonne durch die Bäume eines Waldes
-                    fallen.
-                    <img class="wrap-figure" src="testImages/Wald.png" alt=""/>
-                </div>
+            <div class="text wrap-text">
+                <img src="testImages/lightbulb.png" class="task-icon" alt="">
+                Licht breitet sich immer geradlinig aus.<br>
+                Das kann man besonders gut beobachten, wenn die Lichtstrahlen der Sonne durch die Bäume eines Waldes
+                fallen.
+                <img class="wrap-figure" src="testImages/Wald.png" alt=""/>
+            </div>
         </div>
     </div>
 </div>
 
-<div class="chapter">
+<div id="chap3" class="chapter">
     <div class="section">
         <h1>3 Der Weg des Lichts</h1>
         <div class="text">
@@ -217,14 +235,14 @@
         </div>
     </div>
     <div class="section">
-    <div class="information">
+        <div class="information">
             <div class="text">
                 <img src="testImages/lightbulb.png" class="task-icon" alt=""/> Unsere Augen sind Lichtempfänger. Wir
                 sehen unsere Umwelt, weil die Gegenstände das Licht
                 reflektieren
                 und das Licht von den Gegenständen auf unsere Augen trifft.
             </div>
-    </div>
+        </div>
     </div>
 </div>
 
