Scrollbar Infokasten mit Auge

--- a/src/main/resources/example.html
+++ b/src/main/resources/example.html
@@ -17,7 +17,7 @@
          * @return: All Sections in the current HTML
          */
         function getContainer() {
-            return document.querySelectorAll(".section,.information,.info_and_slide,.slide_vorschau");
+            return document.querySelectorAll(".section,.information,.info_and_slide,.slide_preview");
         }
 
         function getSlides() {
@@ -130,14 +130,14 @@
     </div>
     <br>
     <div class="information">
-        <div class="clearfix">
+        <div class="wrap-text">
             <div class="section">
-                <div class="text ">
+                <div class="text">
                     <img src="testImages/lightbulb.png" class="task-icon" alt="">
                     Damit das Sehen funktioniert, sind besonders die Iris und die Pupille, die Linse und die Netzhaut
                     erforderlich. Die Linse und die Netzhaut sind von außen nicht sichtbar.
                 </div>
-                <div class="slide_vorschau"></div>
+                <div class="slide_preview"></div>
                 <div class="diashow">
                     <div class="slide">
                         <img src="testImages/Aufbau_Auge.png" alt=""/>
