Guess its fixed?

--- a/src/main/resources/example.html
+++ b/src/main/resources/example.html
@@ -51,12 +51,11 @@
     </script>
 </head>
 
-<div id="chapter-parent">
-    <div id="chapter-select">
-    </div>
-</div>
-<div id="debug"></div>
+<!--<div id="debug"></div>-->
+
 <body>
+<div id="chapter-select">
+</div>
 <div class="preamble" id="preamble">
     <div class="text">
         Hallo alle zusammen, dies ist ein Test für die Bachelorarbeit für digitale Lerninhalte!
