Refactoring Splittet JS from HTML to own File Edited Index Visuals

--- a/src/main/resources/example.html
+++ b/src/main/resources/example.html
@@ -4,57 +4,13 @@
     <meta charset="UTF-8">
     <title>Beispiel Lerneinheit</title>
     <link rel="stylesheet" href="css/learningUnit.css">
-
-    <script>
-        function changeBgColor() {
-            document.body.style.backgroundColor = document.getElementById('color').value;
-            document.getElementsByTagName('aufgabe');
-            return 'test';
-        }
-
-        /**
-         * @return: All Sections in the current HTML
-         */
-        function getContainer() {
-            return document.querySelectorAll(".section,.info_and_slide,.slide_vorschau");
-        }
-
-        function getSlides() {
-            return document.querySelectorAll(".slide");
-        }
-
-        async function scrollToBottom() {
-            let current = document.body.scrollTop + window.innerHeight;
-            let target = document.body.scrollHeight;
-            let delta = target - current;
-            const duration = 300;
-            const steps = duration / 10;
-            const stepSize = delta / steps;
-
-            for (let i = 0; i < steps; i++) {
-                window.scrollBy(0, stepSize);
-                await sleep(duration / steps);
-            }
-        }
-
-        function sleep(milliseconds) {
-            return new Promise(resolve => setTimeout(resolve, milliseconds));
-        }
-
-        function getChapter() {
-            return document.querySelectorAll(".chapter");
-        }
-
-        function getElementHeightByID(id) {
-            return document.getElementById(id).offsetHeight;
-        }
-    </script>
 </head>
 
 <!--<div id="debug"></div>-->
 
 <body>
 <div id="chapter-select">
+    <h1 id="index"></h1>
 </div>
 <div class="preamble" id="preamble">
     <div class="text">
@@ -263,3 +219,4 @@
 
 </body>
 </html>
+<script src="learningUnit.js"></script>
