saveInput für Antworten

--- a/src/main/resources/example.html
+++ b/src/main/resources/example.html
@@ -24,6 +24,10 @@
             return document.querySelectorAll(".slide");
         }
 
+        function saveInput() {
+
+        }
+
     </script>
 </head>
 
@@ -80,7 +84,7 @@
         </label>
     </form>
     <br>
-    <input class="submit" type="submit" value="Speichern">
+    <input class="submit" type="submit" value="Speichern" onclick="saveInput()">
 </div>
 
 <div class="chapter">
