--- a/src/main/resources/example.html
+++ b/src/main/resources/example.html
@@ -122,53 +122,57 @@
         </div>
     </div>
     <br>
-    <div class="information">
-        <div class="wrap-text">
-            <div class="section">
-                <div class="text">
-                    <img src="testImages/lightbulb.png" class="task-icon" alt="">
-                    Damit das Sehen funktioniert, sind besonders die Iris und die Pupille, die Linse und die
-                    Netzhaut
-                    erforderlich. Die Linse und die Netzhaut sind von außen nicht sichtbar.
-                </div>
-                <div class="diashow">
-                    <div class="slide">
-                        <img src="testImages/Aufbau_Auge.png" alt=""/>
+    <div class="section">
+        <div class="information">
+            <div class="wrap-text">
+                <div class="section">
+                    <div class="text">
+                        <img src="testImages/lightbulb.png" class="task-icon" alt="">
+                        Damit das Sehen funktioniert, sind besonders die Iris und die Pupille, die Linse und die
+                        Netzhaut
+                        erforderlich. Die Linse und die Netzhaut sind von außen nicht sichtbar.
                     </div>
-                    <div class="slide">
-                        <img src="testImages/Aufbau_Auge_Beschriftung_1.png" alt=""/>
+                    <div class="diashow">
+                        <div class="slide">
+                            <img src="testImages/Aufbau_Auge.png" alt=""/>
+                        </div>
+                        <div class="slide">
+                            <img src="testImages/Aufbau_Auge_Beschriftung_1.png" alt=""/>
+                        </div>
+                        <div class="slide">
+                            <img src="testImages/Aufbau_Auge_Beschriftung_2.png" alt=""/>
+                        </div>
+                        <div class="slide">
+                            <img src="testImages/Aufbau_Auge_Beschriftung_3.png" alt=""/>
+                        </div>
                     </div>
-                    <div class="slide">
-                        <img src="testImages/Aufbau_Auge_Beschriftung_2.png" alt=""/>
+                    <div class="info-and-slide">
+                        <div class="text">
+                            In dem Querschnitt des Augapfels ist die Pupille als Loch in der Iris deutlich zu erkennen.
+                        </div>
                     </div>
-                    <div class="slide">
-                        <img src="testImages/Aufbau_Auge_Beschriftung_3.png" alt=""/>
-                    </div>
-                </div>
-            <div class="info-and-slide">
-                <div class="text">
-                    In dem Querschnitt des Augapfels ist die Pupille als Loch in der Iris deutlich zu erkennen.
-                </div>
-            </div>
 
-            <div class="info-and-slide">
-                <div class="text">
-                    Hinter der Pupille befindet sich die Linse, die dafür sorgt, dass wir Gegenstände deutlich sehen
-                    können.
-                </div>
-            </div>
+                    <div class="info-and-slide">
+                        <div class="text">
+                            Hinter der Pupille befindet sich die Linse, die dafür sorgt, dass wir Gegenstände deutlich
+                            sehen
+                            können.
+                        </div>
+                    </div>
 
-            <div class="info-and-slide">
-                <div class="text">
-                    Die Netzhaut ist dafür zuständig, das gesehene Bild wahrzunehmen und die Informationen über den
-                    Sehnerv
-                    an
-                    das Gehirn weiterzuleiten. Der Sehnerv ist ebenfalls von außen nicht sichtbar.
+                    <div class="info-and-slide">
+                        <div class="text">
+                            Die Netzhaut ist dafür zuständig, das gesehene Bild wahrzunehmen und die Informationen über
+                            den
+                            Sehnerv
+                            an
+                            das Gehirn weiterzuleiten. Der Sehnerv ist ebenfalls von außen nicht sichtbar.
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 </div>
 <div class="chapter">
     <div class="section">
