--- a/src/main/resources/example.html
+++ b/src/main/resources/example.html
@@ -98,7 +98,7 @@
     <div class="section">
         <div class="information">
             <div class="wrap-text">
-                <div class="section">
+                <div style="display: block">
                     <div class="text">
                         <img src="testImages/lightbulb.png" class="task-icon" alt="">
                         Damit das Sehen funktioniert, sind besonders die Iris und die Pupille, die Linse und die
