Drag and Drop v1

--- a/Lerneinheit/example.html
+++ b/Lerneinheit/example.html
@@ -86,14 +86,19 @@
         <div class="task">
             <img src="Icons/Draggable-Card.svg" class="task-icon" alt=""/>
             Ordne die Begriffe zu. Klicke auf das Wort und ziehe es an die richtige Stelle:
-            <div class="draggable-card">Iris</div>
-            <div class="draggable-card">Pupille</div>
-            <div class="draggable-card">Lederhaut</div>
+            <div class="draggable-card" id="drag1" draggable="true" ondragstart="drag(event)">Iris</div>
+            <div class="draggable-card" id="drag2" draggable="true" ondragstart="drag(event)">Pupille</div>
+            <div class="draggable-card" id="drag3" draggable="true" ondragstart="drag(event)">Lederhaut</div>
             <!--TODO: Wie werden Begriffe platziert?        -->
         </div>
         <div class="task-image">
             <img src="testImages/Auge_Groß.png" alt=""/>
+            <div class="drop-field" id="drop1" onDrop="drop(event)" onDragOver="allowDrop(event)"></div>
+            <div class="drop-field" id="drop2" onDrop="drop(event)" onDragOver="allowDrop(event)"></div>
+            <div class="drop-field" id="drop3" onDrop="drop(event)" onDragOver="allowDrop(event)"></div>
         </div>
+        <br>
+        <input class="submit" type="submit" value="Speichern">
     </div>
     <br>
     <div class="section">
@@ -214,3 +219,4 @@
 </body>
 </html>
 <script src="learningUnit.js"></script>
+<script src="dragAndDrop.js"></script>
