placeholder and text alignment

--- a/Lerneinheit/example.html
+++ b/Lerneinheit/example.html
@@ -43,7 +43,7 @@
     <br>
     <form>
         <label>
-            <textarea class="text-area"></textarea>
+            <textarea class="text-area" placeholder="Bitte schreibe deine Antwort hier mit der Tastatur"></textarea>
         </label>
     </form>
     <br>
@@ -69,17 +69,18 @@
             </div>
         </div>
     </div>
-
-    <div class="section">
-        <div class="text">
-            <button class="reading" id="reading-button-2" onclick="playAudio(2)">Vorlesen</button>
-            <br>
-            Tim erkennt seine grüne Iris. Außerdem sieht er seine Pupille,
-            die eigentlich nur ein Loch in der Iris ist. Durch die Pupille fällt Licht in das Auge ein. Tim sieht
-            auch
-            den
-            weißen Teil seines Auges. Dieser Teil heißt Lederhaut. Das gesamte Auge wird auch als Augapfel
-            bezeichnet.
+    <div>
+        <div class="section">
+            <div class="text">
+                <button class="reading" id="reading-button-2" onclick="playAudio(2)">Vorlesen</button>
+                <br>
+                Tim erkennt seine grüne Iris. Außerdem sieht er seine Pupille,
+                die eigentlich nur ein Loch in der Iris ist. Durch die Pupille fällt Licht in das Auge ein. Tim sieht
+                auch
+                den
+                weißen Teil seines Auges. Dieser Teil heißt Lederhaut. Das gesamte Auge wird auch als Augapfel
+                bezeichnet.
+            </div>
         </div>
     </div>
     <div class="section">
