- Added Translations for HTML Control Buttons

--- a/Lerneinheit/example.html
+++ b/Lerneinheit/example.html
@@ -16,7 +16,7 @@
     <div class="text">
         Hallo alle zusammen, dies ist ein Test für die Bachelorarbeit für digitale Lerninhalte!
     </div>
-    <button class="nav-button" onclick="javaBridge.disablePreamble();">Verstanden!</button>
+    <button class="nav-button preamble-button" onclick="javaBridge.disablePreamble();">Verstanden!</button>
 </div> 
 <div class="chapter" id="chapter-1">
     <div class="clearfix">
@@ -47,7 +47,7 @@
         </label>
     </form>
     <br>
-    <input class="submit" type="submit" value="Speichern">
+    <input class="submit save" type="submit" value="Speichern">
 </div>
 
 <div class="chapter">
