Paragraphs no longer have different margins Remove umlauts from files in the "\Lerneinheit" folder Reading / save buttons same blue as fxml buttons

--- a/Lerneinheit/example.html
+++ b/Lerneinheit/example.html
@@ -200,7 +200,7 @@
         </div>
         <div class="task-img">
             <img src="testImages/Tim_Taschenlampe.png" alt=""/>
-            <img src="testImages/Tür.png" alt=""/>
+            <img src="testImages/Tuer.png" alt=""/>
         </div>
     </div>
     <div class="section">
