- closeButton gets renamed to "Das ist ein Test" when Chapter 1 is set Visible to exemplary show that you can alter the Structure Buttons

--- a/Lerneinheit/example.html
+++ b/Lerneinheit/example.html
@@ -51,7 +51,7 @@
 </div>
 
 <div class="chapter">
-    <div class="section">
+    <div class="section" onVisible="renameCloseButton;Das ist ein Test">
         <h1>1 Der Aufbau des menschlichen Auges</h1>
         <img class="eye-small" src="testImages/Auge_Klein.png" alt=""/>
         <!--    TODO: Bild beim nächsten section als Wasserzeichen-->
