- Added defaultTheme.css - Removed fxmlStyle.css from Lerneinheit/css as its unnecessary - Moved FontSizes and Color definitions to defaultTheme.css

--- a/Lerneinheit/example.html
+++ b/Lerneinheit/example.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Beispiel Lerneinheit</title>
+    <link rel="stylesheet" href="css/defaultTheme.css"> <!-- Default Theme-->
     <link rel="stylesheet" href="css/learningUnit.css">
-
 </head>
 
 <body>
