- Added darculaTheme (WIP)

--- a/Lerneinheit/example.html
+++ b/Lerneinheit/example.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Beispiel Lerneinheit</title>
     <link rel="stylesheet" href="css/defaultTheme.css"> <!-- Default Theme-->
+    <link rel="stylesheet" href="css/darcula.css"> <!--Darcula Theme -->
     <link rel="stylesheet" href="css/learningUnit.css">
 </head>
 
