- Now uses default Theme as start - Close Button now gets renamed on the last section to "Beenden"

--- a/Lerneinheit/example.html
+++ b/Lerneinheit/example.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Beispiel Lerneinheit</title>
     <link rel="stylesheet" href="css/defaultTheme.css"> <!-- Default Theme-->
-    <link rel="stylesheet" href="css/darcula.css"> <!--Darcula Theme -->
+<!--    <link rel="stylesheet" href="css/darcula.css"> &lt;!&ndash;Darcula Theme &ndash;&gt;-->
     <link rel="stylesheet" href="css/learningUnit.css">
 </head>
 
@@ -204,7 +204,7 @@
             <img src="testImages/Tuer.png" alt=""/>
         </div>
     </div>
-    <div class="section">
+    <div class="section" onVisible="renameCloseButton;Beenden">
         <div class="information">
             <div class="text">
                 <img src="testImages/lightbulb.png" class="task-icon" alt=""/> Unsere Augen sind Lichtempfänger. Wir
