--- a/Lerneinheit/example.html
+++ b/Lerneinheit/example.html
@@ -34,20 +34,22 @@
     </div>
 </div>
 
-<div class="section">
-    <div class="task">
-        Warum soll Tim zum Augenarzt gehen? Schreibe auf.
-    </div>
+<div class="chapter">
+    <div class="section">
+        <div class="task">
+            Warum soll Tim zum Augenarzt gehen? Schreibe auf.
+        </div>
 
-    <img src="testImages/keyboard.png" style="max-width:100px" alt="">
-    <br>
-    <form>
-        <label>
-            <textarea class="text-area" placeholder="Bitte schreibe deine Antwort hier mit der Tastatur"></textarea>
-        </label>
-    </form>
-    <br>
-    <input class="submit save" type="submit" value="Speichern">
+        <img src="testImages/keyboard.png" style="max-width:100px" alt="">
+        <br>
+        <form>
+            <label>
+                <textarea class="text-area" placeholder="Bitte schreibe deine Antwort hier mit der Tastatur"></textarea>
+            </label>
+        </form>
+        <br>
+        <input class="submit save" type="submit" value="Speichern">
+    </div>
 </div>
 
 <div class="chapter">
@@ -87,7 +89,7 @@
         <div class="task">
             <img src="Icons/Draggable-Card.svg" class="task-icon" alt=""/>
             Ordne die Begriffe zu. Klicke auf das Wort und ziehe es an die richtige Stelle:
-            <div class="draggable-card" id="drag1" draggable="true" ondragstart="drag(event)">Iris</div>
+            <b class="draggable-card" id="drag1" draggable="true" ondragstart="drag(event)">Iris</b>
             <div class="draggable-card" id="drag2" draggable="true" ondragstart="drag(event)">Pupille</div>
             <div class="draggable-card" id="drag3" draggable="true" ondragstart="drag(event)">Lederhaut</div>
         </div>
@@ -103,11 +105,12 @@
         <div class="information">
             <div class="wrap-text">
                 <div style="display: block">
-                    <div class="text">
-                        <img src="testImages/lightbulb.png" class="task-icon" alt="">
-                        Damit das Sehen funktioniert, sind besonders die Iris und die Pupille, die Linse und die
-                        Netzhaut
-                        erforderlich. Die Linse und die Netzhaut sind von außen nicht sichtbar.
+                    <div>
+                        <div class="text">
+                            <img src="testImages/lightbulb.png" class="task-icon" alt="">
+                            Damit das Sehen funktioniert, sind besonders die Iris und die Pupille, die Linse und die
+                            Netzhaut erforderlich. Die Linse und die Netzhaut sind von außen nicht sichtbar.
+                        </div>
                     </div>
                     <div class="diashow">
                         <div class="slide">
@@ -128,7 +131,6 @@
                             In dem Querschnitt des Augapfels ist die Pupille als Loch in der Iris deutlich zu erkennen.
                         </div>
                     </div>
-
                     <div class="info-and-slide">
                         <div class="text">
                             Hinter der Pupille befindet sich die Linse, die dafür sorgt, dass wir Gegenstände deutlich
