--- a/Lerneinheit/example.html
+++ b/Lerneinheit/example.html
@@ -22,7 +22,7 @@
     <div class="clearfix">
         <div class="section">
             <img class="wrap-figure tim" src="testImages/tim.png" alt="TEST">
-            <div class="text">Das ist Tim.</div>
+            <div class="text-tim">Das ist Tim.</div>
         </div>
         <div class="section">
             <button class="reading" id="reading-button-0" value="0" onclick="playAudio(0);">Vorlesen</button>
