--- a/Lerneinheit/example.html
+++ b/Lerneinheit/example.html
@@ -169,12 +169,18 @@
     </div>
     <div class="section">
         <div class="information">
-            <div class="text wrap-text">
-                <img src="testImages/lightbulb.png" class="task-icon" alt="">
-                Licht breitet sich immer geradlinig aus.<br>
-                Das kann man besonders gut beobachten, wenn die Lichtstrahlen der Sonne durch die Bäume eines Waldes
-                fallen.
-                <img class="wrap-figure" src="testImages/Wald.png" alt=""/>
+            <div>
+                <div class="light-bulb">
+                    <img src="testImages/lightbulb.png" class="task-icon" alt="">
+                </div>
+                    <img class="forest" src="testImages/Wald.png" alt=""/>
+                    <div class="section">
+                        <div class="forest-text">
+                            Licht breitet sich immer geradlinig aus.
+                            Das kann man besonders gut beobachten, wenn die Lichtstrahlen der Sonne durch die Bäume eines Waldes
+                            fallen.
+                        </div>
+                    </div>
             </div>
         </div>
     </div>
