Drag-and-drop v2.0

--- a/Lerneinheit/example.html
+++ b/Lerneinheit/example.html
@@ -87,16 +87,18 @@
     </div>
     <div class="section">
         <div class="task">
-            <img src="Icons/Draggable-Card.svg" class="task-icon" alt=""/>
-            Ordne die Begriffe zu. Klicke auf das Wort und ziehe es an die richtige Stelle:
-            <b class="draggable-card" id="drag1" draggable="true" ondragstart="drag(event)">Iris</b>
-            <div class="draggable-card" id="drag2" draggable="true" ondragstart="drag(event)">Pupille</div>
-            <div class="draggable-card" id="drag3" draggable="true" ondragstart="drag(event)">Lederhaut</div>
+            <div class="wrap-text">
+                <img src="Icons/Draggable-Card.svg" class="task-icon" alt=""/>
+                Ordne die Begriffe zu. <br> Klicke auf das Wort und ziehe es an die richtige Stelle:
+                <img class="draggable-card" id="drag-1" draggable="true" src="testImages/lederhaut.png" alt="">
+                <img class="draggable-card" id="drag-2" draggable="true" src="testImages/pupille.png" alt="">
+                <img class="draggable-card" id="drag-3" draggable="true" src="testImages/iris.png" alt="">
+            </div>
         </div>
         <div class="task-image">
-            <div class="drop-field" id="drop1" onDrop="drop(event)" onDragOver="allowDrop(event)"></div>
-            <div class="drop-field" id="drop2" onDrop="drop(event)" onDragOver="allowDrop(event)"></div>
-            <div class="drop-field" id="drop3" onDrop="drop(event)" onDragOver="allowDrop(event)"></div>
+            <div class="drop-field" id="drop-1"></div>
+            <div class="drop-field" id="drop-2"></div>
+            <div class="drop-field" id="drop-3"></div>
         </div>
         <input class="submit" type="submit" value="Speichern">
     </div>
