Drag-and-drop v3.0

--- a/Lerneinheit/example.html
+++ b/Lerneinheit/example.html
@@ -100,7 +100,7 @@
             <div class="drop-field" id="drop-2"></div>
             <div class="drop-field" id="drop-3"></div>
         </div>
-        <input class="submit" type="submit" value="Speichern">
+        <input class="submit" type="submit" value="Speichern" onclick="save()">
     </div>
     <br>
     <div class="section">
