play and stop Audio with delay

--- a/Lerneinheit/example.html
+++ b/Lerneinheit/example.html
@@ -61,7 +61,7 @@
     <div class="watermark">
         <div class="section">
             <div class="text">
-                <button class="reading" id="reading-button-1.1" onclick="playAudio(this)" track-number="1.1">Vorlesen</button>
+                <button class="reading" id="reading-button-1-1" onclick="playAudio(this)" track-number="1-1">Vorlesen</button>
                 <br>
                 Zu Hause steht Tim vor dem Spiegel und beobachtet seine Augen. Seine grünen Augen sehen aus wie immer.
                 Er
@@ -74,7 +74,7 @@
     <div>
         <div class="section">
             <div class="text">
-                <button class="reading" id="reading-button-1.2" onclick="playAudio(this)" track-number="1.2">Vorlesen</button>
+                <button class="reading" id="reading-button-1-2" onclick="playAudio(this)" track-number="1-2">Vorlesen</button>
                 <br>
                 Tim erkennt seine grüne Iris. Außerdem sieht er seine Pupille,
                 die eigentlich nur ein Loch in der Iris ist. Durch die Pupille fällt Licht in das Auge ein. Tim sieht
