Drag and drop v4.1

--- a/Lerneinheit/example.html
+++ b/Lerneinheit/example.html
@@ -90,13 +90,13 @@
             <div class="wrap-text">
                 <img src="Icons/Draggable-Card.svg" class="task-icon" alt=""/>
                 Ordne die Begriffe zu. <br> Klicke auf das Wort und ziehe es an die richtige Stelle:
-                <div class="drop-start" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <div class="drop-start">
                     <img class="draggable-card" id="drag-1" draggable="true" src="testImages/lederhaut.png" alt="">
                 </div>
-                <div class="drop-start" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <div class="drop-start">
                     <img class="draggable-card" id="drag-2" draggable="true" src="testImages/pupille.png" alt="">
                 </div>
-                <div class="drop-start" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <div class="drop-start">
                     <img class="draggable-card" id="drag-3" draggable="true" src="testImages/iris.png" alt="">
                 </div>
             </div>
